Fixing horizontal scroll issue

--- a/src/04/02-end/stylesheets/carousel.css
+++ b/src/04/02-end/stylesheets/carousel.css
@@ -1,8 +1,9 @@
 .quotes-carousel-container {
   height: 23em;
   margin: 0 auto;
-  width: 30em;
+  overflow: hidden;
   position: relative;
+  width: 100%;
 }
 
 .quotes-carousel {
@@ -18,28 +19,28 @@
   list-style: none;
   padding: 1em;
   position: absolute;
-    top: 50%;
-    left: 50%;
-  transform: translate(calc(100% + 12em), -50%) scale(.6);
-  transition: transform 1.5s cubic-bezier(.7,-0.3,.2,1.3),
-              opacity .5s .6s ease-out;
+  top: 50%;
+  left: 50%;
+  transform: translate(calc(100% + 12em), -50%) scale(0.6);
+  transition: transform 1.5s cubic-bezier(0.7, -0.3, 0.2, 1.3),
+    opacity 0.5s 0.6s ease-out;
   width: 16em;
 }
 
 .quote-image {
   background-size: 100%;
   border-radius: 50%;
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.5) inset;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5) inset;
   height: 7em;
   position: absolute;
-    top: -7em;
-    left: calc(50% - 3.5em);
+  top: -7em;
+  left: calc(50% - 3.5em);
   width: 7em;
 }
 
 .quote.previous {
-  opacity: .5;
-  transform: translate(-150%, -50%) scale(.8);
+  opacity: 0.5;
+  transform: translate(-150%, -50%) scale(0.8);
 }
 
 .quote.current {
@@ -49,19 +50,19 @@
 }
 
 .quote.next {
-  opacity: .5;
-  transform: translate(50%, -50%) scale(.8);
+  opacity: 0.5;
+  transform: translate(50%, -50%) scale(0.8);
 }
 
 .quote.left {
-  transform: translate(calc(-150% - 12em), -50%) scale(.6);
+  transform: translate(calc(-150% - 12em), -50%) scale(0.6);
 }
 
 /* styling pips */
 
 .quotes-carousel-pips {
   position: absolute;
-    bottom: 0;
+  bottom: 0;
   text-align: center;
   width: 100%;
 }
@@ -80,27 +81,25 @@
   cursor: pointer;
   display: inline-block;
   height: 20px;
-  margin: 0 .1em;
+  margin: 0 0.1em;
   padding: 0;
-  transform: scale(.5);
-  transition: all .8s cubic-bezier(0,1,.3,1);
+  transform: scale(0.5);
+  transition: all 0.8s cubic-bezier(0, 1, 0.3, 1);
   width: 20px;
 }
 
 .pip.previous,
 .pip.next {
   background: #ccc;
-  transform: scale(.6);
+  transform: scale(0.6);
 }
 
 .pip.current {
   background: #fff;
   cursor: default;
-  transform: scale(.7);
+  transform: scale(0.7);
 }
 
 .pip:not(.current):hover {
   transform: scale(1);
 }
-
-
